Modificación de estilos y logo

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -17,7 +17,7 @@
   <!-- NAVIGATION BAR -->
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html" style="margin-right: 0;" ><img src="../Fotos_pagina/Original makeup.png" alt=""
+      <a class="navbar-brand" href="../index.html" style="margin-right: 0;" ><img src="../Fotos_pagina/Logo_NAOM.png" alt=""
           width="100px"></a>
       <div id="user-wrapper">
         <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
@@ -94,7 +94,7 @@
       </div>
       <br>
       <div class="box">
-        <label for="exampleFormControlInput1" class="form-label">Télefono:</label>
+        <label for="exampleFormControlInput1" class="form-label">Teléfono:</label>
         <input type="tel" maxlength="12" class="form-control" id="exampleFormControlInput3" placeholder="Formato: xx-xxxx-xxxx">
       </div>
       <br>
