--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-xl bg-light">
         <div class="container-fluid">
             <a class="navbar-brand" style="margin-right: 0;" href="../index.html"><img
-                    src="../Fotos_pagina/Original makeup.png" alt="" width="100px"></a>
+                    src="../Fotos_pagina/Original makeup.png" alt="" width="150px"></a>
             <div id="user-wrapper">
                 <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px"
                         id="shoppingCart"></a>
@@ -68,7 +68,7 @@
             <div class="col-lg-7 form-outline mb-2 text-center">
                 <label class="form-label" for="form0"></label>
                 <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
-                <p class="mt-1">La imagen debe de una altura y ancho iguales. Ej. 160x160</p>
+                <p class="mt-1">La imagen debe de tener una altura y ancho iguales. Ej. 160x160</p>
                 <input type="file" name="file" id="form0" onchange="encodeImageFileAsURL(this)" class="form-control mt-2" />
             </div>
             <div class="col-lg-7 form-outline mb-2">
