--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <body>
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img src="../Fotos_pagina/Original makeup.png"
-          alt="" width="100px"></a>
+      <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img src="./Fotos_pagina/Logo_NAOM.png"
+          alt="" width="150"></a>
       <div id="user-wrapper">
         <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
         <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
@@ -30,22 +30,22 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
+            <a class="nav-link" href="./HTML/maquillaje.html">Maquillaje</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
+            <a class="nav-link" href="./HTML/cuidadofacial.html">Cuidado facial</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./brochas.html">Brochas</a>
+            <a class="nav-link" href="./HTML/brochas.html">Brochas</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./accesorios.html">Accesorios</a>
+            <a class="nav-link" href="./HTML/accesorios.html">Accesorios</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacto</a>
+            <a class="nav-link" href="./HTML/contact.html">Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="aboutus.html">Nosotros</a>
+            <a class="nav-link" href="./HTML/aboutus.html">Nosotros</a>
           </li>
         </ul>
       </div>
