Se modifico ortografia, holders de formularios e interfaz

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     <div class="container-fluid">
       <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img src="./Fotos_pagina/Logo_NAOM.png"
           alt="" width="150"></a>
-      <div id="user-wrapper">
-        <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-        <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
-      </div>
+          <div id="user-wrapper">
+            <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
+            <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+          </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -50,8 +50,8 @@
         </ul>
       </div>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
@@ -114,14 +114,13 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <span>Síguenos en redes</span>
-        <!-- Whatsapp -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-          style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
-
-        <!-- Instagram -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-          style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
-        <br>
+          <!-- Whatsapp -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
+            style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
+          <!-- Instagram -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/" target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
+            style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
+          <br>
 
         <!-- METODOS DE PAGO -->
         <span>Métodos de pago</span>
@@ -130,7 +129,7 @@
       </section>
     </div>
     <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
-      Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
+      Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
     </div>
     <a href="../html/formProductos.html">FORM</a>
   </footer>
