--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
       <div id="user-wrapper">
-        <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
+        <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
         <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,8 +46,8 @@
         </ul>    
       </div>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
@@ -112,7 +112,7 @@
                   src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
-          <p class="card-text">Ingeniero Geofísico con un gran gusto en el desarrollo Web Full Stack.Con muchas ganas de
+          <p class="card-text">Ingeniero Geofísico con un gran gusto en el desarrollo Web Full Stack. Con muchas ganas de
             seguir creciendo personal y profesionalmente.</p>
           <div class="card-button">
             <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
@@ -152,10 +152,8 @@
                   src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
-          <p class="card-text">Diseñadora gráfica, autodidacta, apasionada del diseño, la mercadotecnia, fotografía, la
-            tecnología y con un gusto adquirido por la programación. Me preparé como Desarrolladora Full Stack y
-            Diseñadora
-            UX.
+          <p class="card-text">Diseñadora gráfica, proactiva, apasionada del diseño, la mercadotecnia, fotografía, la
+            tecnología y con un gusto adquirido por la programación. Me preparé como Desarrolladora Full Stack y Diseñadora UX.
           </p>
           <div class="card-button">
             <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
@@ -198,7 +196,7 @@
                   src="../Fotos_pagina/GitHub.png" alt="" width="25px" height="25px"></a>
             </li>
           </ul>
-          <p class="card-text">Ingeniera Bioquímica y Técnica Análista programadora, interesada en el área de TI. Realicé
+          <p class="card-text">Ingeniera Bioquímica y Técnica Analista programadora, interesada en el área de TI. Realicé
             cursos y certificaciones para enfocarme al área de desarrollo web Full Stack.</p>
           <div class="card-button">
             <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
@@ -231,8 +229,8 @@
       <div id="descripcion">
         <h5>Nuestro proyecto</h5>
         <p>Este proyecto consta de una página de e-commerce adecuada para una tienda en línea de maquillaje existente que
-          se dedicaba a vender mediante instagram.</p>
-        <p>Desarrollamos la página mediante tecnologías como HTML, CSS, JavaScript, bootstrap, Java y bases de datos, para
+          se dedicaba a vender mediante Instagram.</p>
+        <p>Desarrollamos la página mediante tecnologías como HTML, CSS, JavaScript, Bootstrap, Java y bases de datos, para
           dicho proyecto todos los integrantes se involucraron en todas las partes del desarrollo.</p>
       </div>
     </div>
@@ -247,25 +245,13 @@
     <!-- Section: Social media -->
     <section class="mb-4">
       <span>Síguenos en redes</span>
-      <!-- Whatsapp -->
-      <a
-        class="btn btn-link btn-floating btn-lg text-dark m-1"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        style="padding: 0;"
-        ><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i
-      ></a>
-
-      <!-- Twitter -->
-      <a
-        class="btn btn-link btn-floating btn-lg text-dark m-1"
-        href="#!"
-        role="button"
-        data-mdb-ripple-color="dark"
-        style="padding: 0;"
-        ><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i
-      ></a>
+          <!-- Whatsapp -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
+            style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
+          <!-- Instagram -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/" target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
+            style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
+          <br>
       <br>
       <span>Métodos de pago</span>
       <a
@@ -276,25 +262,15 @@
         style="padding: 0;"
         ><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i
       ></a>
-      
     </section>
-
   </div>
-
-
   <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
-    Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
+    Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
   </div>
-
 </footer>
-
-
-
-
   <script src="../js/navbar.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
 </body>
-
 </html>
