--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/registro.css">
   </head>
   <body>
     <nav class="navbar navbar-expand-xl bg-light">
@@ -22,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="./maquillaje.html">Maquillaje</a>
+              <a class="nav-link" href="./Maquillaje.html">Maquillaje</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
@@ -48,14 +49,14 @@
       </div>
     </nav>
 
-    <h1>Accesorios</h1>
+    <h1>Carrito</h1>
 
-    <footer class="text-center text-white" style="background-color:black;">
-      <!-- Grid container -->
-      <div class="container">
-        <!-- Section: Social media -->
-        <section class="mb-4">
-          <span>Síguenos en redes</span>
+<footer class="text-center text-white" style="background-color:black;">
+    <!-- Grid container -->
+    <div class="container">
+      <!-- Section: Social media -->
+      <section class="mb-4">
+        <span>Síguenos en redes</span>
           <!-- Whatsapp -->
           <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
             style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
@@ -73,7 +74,7 @@
         data-mdb-ripple-color="dark"
         style="padding: 0;"
         ><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i
-      ></a>  
+      ></a>
     </section>
   </div>
   <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
