--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -4,27 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>NAOM-Contacto</title>
+  <title>NAOM-Nosotros</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/footer.css">
-  <link rel="stylesheet" href="../css/contact.css">
+  <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/aboutus.css">
+
 </head>
-
 <body>
-
-  <!-- NAVIGATION BAR -->
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="../index.html" style="margin-right: 0;" ><img src="../Fotos_pagina/Logo_NAOM.png" alt=""
-          width="100px"></a>
+      <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
       <div id="user-wrapper">
-        <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
+        <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
         <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
       </div>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -47,11 +43,11 @@
           <li class="nav-item">
             <a class="nav-link" href="aboutus.html">Nosotros</a>
           </li>
-        </ul>
+        </ul>    
       </div>
       <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-dark" type="submit">Search</button>
+        <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-outline-dark" type="submit">Buscar</button>
       </form>
     </div>
   </nav>
@@ -89,7 +85,7 @@
       </div>
       <br>
       <div class="box">
-        <label for="exampleFormControlInput1" class="form-label">e-mail:</label>
+        <label for="exampleFormControlInput1" class="form-label">Correo:</label>
         <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
       </div>
       <br>
@@ -121,32 +117,33 @@
       <!-- Section: Social media -->
       <section class="mb-4">
         <span>Síguenos en redes</span>
-        <!-- Whatsapp -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-          style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
-
-        <!-- Instagram -->
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-          style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
-        <br>
-
-        <!-- METODOS DE PAGO -->
-        <span>Métodos de pago</span>
-        <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-          style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
-      </section>
-    </div>
-    <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
-      Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
-    </div>
-  </footer>
-
-  <script src="https://smtpjs.com/v3/smtp.js"></script>
+          <!-- Whatsapp -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
+            style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
+  
+          <!-- Instagram -->
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/" target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
+            style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
+          <br>
+      <br>
+      <span>Métodos de pago</span>
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="#!"
+        role="button"
+        data-mdb-ripple-color="dark"
+        style="padding: 0;"
+        ><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i
+      ></a>
+    </section>
+  </div>
+  <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
+    Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
+  </div>
+</footer>
   <script src="../js/navbar.js"></script>
-  <script src="../js/contacto.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-    </script>
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
 </body>
-
 </html>
