--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -44,7 +44,7 @@
         </div>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-dark" type="submit">Search</button>
+          <button class="btn btn-outline-dark" type="submit">Buscar</button>
         </form>
       </div>
     </nav>
@@ -54,27 +54,27 @@
         <h1 class="mt-5">CREA TU CUENTA</h1>
     <p>¡Crea tu cuenta para recibir en exclusiva nuestras ofertas, nuevos productos y más! </p>
     <form>
-        <div class="row justify-content-around mt-5">
-          <div class="col-lg-4 col-sm-8">
+        <div class="row justify-content-around mt-5" id="Cuenta">
+          <div class="col-lg-4 col-sm-8"><label>Nombre:</label>
             <input type="text" class="form-control" placeholder="Nombre:">
           </div>
-          <div class="col-lg-4 col-sm-8">
+          <div class="col-lg-4 col-sm-8"><label>Apellido:</label>
             <input type="text" class="form-control" placeholder="Apellido:">
           </div>
         </div>
         <div class="row justify-content-around">
-            <div class="col-lg-4 col-sm-8">
-              <input type="text" class="form-control" placeholder="Email:">
+            <div class="col-lg-4 col-sm-8"><label>Correo:</label>
+              <input type="text" class="form-control" placeholder="name@example.com:">
             </div>
           
-            <div class="col-lg-4 col-sm-8">
+            <div class="col-lg-4 col-sm-8"><label>Teléfono:</label>
               <input type="tel" class="form-control" placeholder="Teléfono:">
             </div>
             <div class="row justify-content-around">
-            <div class="col-lg-4 col-sm-8">
+            <div class="col-lg-4 col-sm-8"><label>Contraseña:</label>
               <input type="password" class="form-control" placeholder="Contraseña:">
             </div>
-            <div class="col-lg-4 col-sm-8">
+            <div class="col-lg-4 col-sm-8"><label>Confirmar Contraseña:</label>
               <input type="password" class="form-control" placeholder="Confirmar contraseña:">
             </div>
           </div>
@@ -95,25 +95,32 @@
         <section class="mb-4">
           <span>Síguenos en redes</span>
           <!-- Whatsapp -->
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" target="_blank" title="Mándame un mensaje" role="button" data-mdb-ripple-color="dark"
             style="padding: 0;"><img src="../Fotos_pagina/Whats.png" width="40px" style="color: white;" alt=""></i></a>
   
           <!-- Instagram -->
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
+          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="https://www.instagram.com/natalia_omakeup/" target="_blank" title="Sígueme en Instagram" role="button" data-mdb-ripple-color="dark"
             style="padding: 0;"><img src="../Fotos_pagina/IG.png" alt="" width="40px" height="40px"></i></a>
           <br>
-  
-          <!-- METODOS DE PAGO -->
-          <span>Métodos de pago</span>
-          <a class="btn btn-link btn-floating btn-lg text-dark m-1" href="#!" role="button" data-mdb-ripple-color="dark"
-            style="padding: 0;"><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i></a>
-        </section>
-      </div>
-      <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
-        Copyright NAOM (WebOs) - 2022. Todos los derechos reservados.
-      </div>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="../js/navbar.js"></script>
-  </body>
+      <br>
+      <span>Métodos de pago</span>
+      <a
+        class="btn btn-link btn-floating btn-lg text-dark m-1"
+        href="#!"
+        role="button"
+        data-mdb-ripple-color="dark"
+        style="padding: 0;"
+        ><img src="../Fotos_pagina/tarjetas1.png" alt="" width="200px"></i
+      ></a>
+    </section>
+  </div>
+  <div class="text-center text-dark pb-2" style="background-color: rgba(0, 0, 0, 0.2);">
+    Copyright NAOM (WebOs) - 2023. Todos los derechos reservados.
+  </div>
+</footer>
+  <script src="../js/navbar.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+</body>
 </html>
