Se modifico errores de ortografia en registro

--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -14,7 +14,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
         <div id="user-wrapper">
-          <a class="iconNav" href="#"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
+          <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
           <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +43,7 @@
           </ul>    
         </div>
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
           <button class="btn btn-outline-dark" type="submit">Buscar</button>
         </form>
       </div>
@@ -55,27 +55,27 @@
     <p>¡Crea tu cuenta para recibir en exclusiva nuestras ofertas, nuevos productos y más! </p>
     <form>
         <div class="row justify-content-around mt-5" id="Cuenta">
-          <div class="col-lg-4 col-sm-8"><label>Nombre:</label>
-            <input type="text" class="form-control" placeholder="Nombre:">
+          <div class="col-lg-4 col-sm-8"><label><strong>Nombre:</strong></label>
+            <input type="text" class="form-control" placeholder="Nombre">
           </div>
-          <div class="col-lg-4 col-sm-8"><label>Apellido:</label>
-            <input type="text" class="form-control" placeholder="Apellido:">
+          <div class="col-lg-4 col-sm-8"><label><strong>Apellido:</strong></label>
+            <input type="text" class="form-control" placeholder="Apellido">
           </div>
         </div>
         <div class="row justify-content-around">
-            <div class="col-lg-4 col-sm-8"><label>Correo:</label>
-              <input type="text" class="form-control" placeholder="name@example.com:">
+            <div class="col-lg-4 col-sm-8"><label><strong>Correo:</strong></label>
+              <input type="text" class="form-control" placeholder="name@example.com">
             </div>
           
-            <div class="col-lg-4 col-sm-8"><label>Teléfono:</label>
-              <input type="tel" class="form-control" placeholder="Teléfono:">
+            <div class="col-lg-4 col-sm-8"><label><strong>Teléfono:</strong></label>
+              <input type="tel" class="form-control" placeholder="Teléfono">
             </div>
             <div class="row justify-content-around">
-            <div class="col-lg-4 col-sm-8"><label>Contraseña:</label>
-              <input type="password" class="form-control" placeholder="Contraseña:">
+            <div class="col-lg-4 col-sm-8"><label><strong>Contraseña:</strong></label>
+              <input type="password" class="form-control" placeholder="Contraseña">
             </div>
-            <div class="col-lg-4 col-sm-8"><label>Confirmar Contraseña:</label>
-              <input type="password" class="form-control" placeholder="Confirmar contraseña:">
+            <div class="col-lg-4 col-sm-8"><label><strong>Confirmar contraseña:</strong></label>
+              <input type="password" class="form-control" placeholder="Confirmar contraseña">
             </div>
           </div>
           <div class="row justify-content-around">
