--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -9,6 +9,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
+  <link rel="stylesheet" href="../css/formProducts.css">
   <link rel="stylesheet" href="../css/aboutus.css">
 
 </head>
