--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -51,24 +51,26 @@
 
     
      <main class="container ">
+      <div class="alert alert-danger" id="alertError" style="display: none;" role="alert">
+      </div>
         <h1 class="mt-5">CREA TU CUENTA</h1>
     <p>¡Crea tu cuenta para recibir en exclusiva nuestras ofertas, nuevos productos y más! </p>
     <form>
         <div class="row justify-content-around mt-5" id="Cuenta">
           <div class="col-lg-4 col-sm-8"><label><strong>Nombre:</strong></label>
-            <input type="text" class="form-control" placeholder="Nombre">
+            <input type="text" class="form-control" placeholder="Nombre" id="nombre">
           </div>
           <div class="col-lg-4 col-sm-8"><label><strong>Apellido:</strong></label>
-            <input type="text" class="form-control" placeholder="Apellido">
+            <input type="text" class="form-control" placeholder="Apellido" id="apellido">
           </div>
         </div>
         <div class="row justify-content-around">
             <div class="col-lg-4 col-sm-8"><label><strong>Correo:</strong></label>
-              <input type="text" class="form-control" placeholder="name@example.com">
+              <input type="text" class="form-control" placeholder="name@example.com" id="email">
             </div>
           
             <div class="col-lg-4 col-sm-8"><label><strong>Teléfono:</strong></label>
-              <input type="tel" class="form-control" placeholder="Teléfono">
+              <input type="tel" class="form-control" placeholder="Teléfono" id="tel">
             </div>
             <div class="row justify-content-around">
             <div class="col-lg-4 col-sm-8"><label><strong>Contraseña:</strong></label>
@@ -80,7 +82,7 @@
           </div>
           <div class="row justify-content-around">
             <div class="col-lg-4 col-9 text-center my-5">
-          <button type="button" class="btnRegistro">¡Regístrate ahora!</button>
+          <button type="button" class="btnRegistro" id="btnRegistro">¡Regístrate ahora!</button>
         </div>
        </div><div class="mb-5"></div>   
        </div>  
@@ -120,6 +122,7 @@
   </div>
 </footer>
   <script src="../js/navbar.js"></script>
+  <script src="../js/registro.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
