Otra configuracion rapida al form de productos

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -58,6 +58,8 @@
     <!-- Formulario -->
     <div class="alert alert-danger" role="alert" style="display: none;" id="alertError2">
     </div>
+    <div class="alert alert-success" role="alert" style="display: none;" id="alertSuccess">
+    </div>
     <div class="mx-2 my-4" id="formulario">
         <form class="row justify-content-around" action="" id="form">
             <div class="col-lg-7 form-outline mb-2 text-center">
