Ajuste de tamanio de imagen en navbar e iconos

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -9,7 +9,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  <link rel="stylesheet" href="../css/aboutus.css">
+  <link rel="stylesheet" href="../css/contact.css">
 
 </head>
 <body>
@@ -60,7 +60,6 @@
         <h1 class="text-center"> <b> Contáctanos </b> </h1>
       </header>
       <div id="banner">
-          
       </div>
       <!-- INFO DE CONTACTO -->
     <div class="text-center col-lg-5 col-sm-12 pt-2" id="contactUs">
