--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img src="./Fotos_pagina/Logo_NAOM.png"
-          alt="" width="150"></a>
+          alt=""></a>
           <div id="user-wrapper">
             <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
             <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
@@ -59,7 +59,7 @@
   <!--<div id="banner"></div>-->
   <!--iniciocarrusel-->
   
-  <div id="hero-carousel" class="carousel slide px-5" data-bs-ride="carousel">
+  <div id="hero-carousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
       <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#hero-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -68,10 +68,10 @@
     <div class="carousel-inner">
       <div class="carousel-item active c-item">
         <img src="/Fotos_pagina/pink-makeup-1611776547 (1).png" class="d-block w-100 c-img" alt="Slide1">
-        <div class="carousel-caption">
+        <!-- <div class="carousel-caption">
           <h5>Brocha</h5>
           <p>La mejor brocha de mexico.</p>
-        </div>
+        </div> -->
       </div>
       <div class="carousel-item c-item">
         <img src="/Fotos-productos/FullSizeRender-3.jpg" class="d-block w-100 c-img" alt="slide2">
