--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -9,7 +9,7 @@
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
-  <link rel="stylesheet" href="../css/aboutus.css">
+  <link rel="stylesheet" href="../css/maquillaje.css">
 
 </head>
 <body>
@@ -52,7 +52,18 @@
     </div>
   </nav>
 
-    <h1>Maquillaje</h1>
+    <main class="container-fluid" id="mainContainer">
+      <div class="float-lg-start d-xl-block" id="leftBox">
+        <p class="text-center mt-5"><a role="button"><strong>Maquillaje</strong></a></p>
+        <p id="precio" class="text-center"><strong>Precio</strong></p>
+        <div id="leftBoxBottom">
+          <input type="text" class="me-2" placeholder="min.">
+          <input type="text" class="ms-2" placeholder="máx.">
+        </div>
+      </div>
+      <div id="card-wrapper" class="row mt-5 justify-content-around">
+      </div>
+    </main>
 
     <footer class="text-center text-white" style="background-color:black;">
       <!-- Grid container -->
@@ -89,5 +100,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
+    <script type="module" src="../js/maquillaje.js"></script>
 </body>
 </html>
