Cambiar estilos de botones y agregar grid a body de páginas

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -51,7 +51,6 @@
       </form>
     </div>
   </nav>
-  <br>
 
   <!-- MAIN PAGE -->
   <main class="container">
@@ -98,14 +97,11 @@
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
           placeholder="Escribe tu mensaje"></textarea>
         <div class="pt-2 text-center">
-          <button class="btn btn-light" type="submit" style="background-color: #EFCFCF;"
-            id="btnContactoEnviar">Enviar</button>
+          <button type="submit" id="btnContactoEnviar">Enviar</button>
         </div>
       </div>
     </div>
     </div>
-
-    <br>
   </main>
 
 
