Pagina de maquillaje arreglada y se agregaron estilos css

--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
   <link rel="stylesheet" href="../css/maquillaje.css">
+  <script src="https://kit.fontawesome.com/1f6a29c5b3.js" defer crossorigin="anonymous"></script>
 
 </head>
 <body>
@@ -61,7 +62,7 @@
           <input type="text" class="ms-2" placeholder="máx.">
         </div>
       </div>
-      <div id="card-wrapper" class="row mt-5 justify-content-around">
+      <div id="card-wrapper" class="row mt-5">
       </div>
     </main>
 
