--- a/HTML/carrito.html
+++ b/HTML/carrito.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/footer.css">
   <link rel="stylesheet" href="../css/navbar.css">
+  <script src="https://kit.fontawesome.com/1f6a29c5b3.js" defer crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../css/registro.css">
   </head>
   <body>
