Se coloco CVs y color de letra en botones y titulos

--- a/HTML/aboutus.html
+++ b/HTML/aboutus.html
@@ -73,8 +73,8 @@
           </ul>
           <p class="card-text">Ingeniera industrial especializada en desarrollo de software, motivada y apasionada por
             aprender y practicar nuevos lenguajes de programación.</p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+          <div class="card-button" target="_blank">
+            <a href="https://drive.google.com/file/d/1buFMEPrkQKL25Z1pSAjZR7GE-MpeVgRP/view?usp=share_link"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
@@ -86,15 +86,15 @@
           <h5 class="card-title">Adrian Arguello</h5>
           <h6>Developer Team</h6>
           <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              <a href="https://github.com/lorerzd" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
+            <li class="list-group-item" target="_blank">
+              <a href="https://github.com/arguelloar" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
                   alt="" width="25px" height="25px"></a>
             </li>
           </ul>
           <p class="card-text">Java Developer. Me apasiona la tecnología, me gusta resolver problemas y ser eficiente.
             Soy muy flexible a la hora de aprender nuevas tecnologias.
           </p>
-          <div class="card-button">
+          <div class="card-button" target="_blank">
             <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
           </div>
@@ -114,33 +114,13 @@
           </ul>
           <p class="card-text">Ingeniero Geofísico con un gran gusto en el desarrollo Web Full Stack. Con muchas ganas de
             seguir creciendo personal y profesionalmente.</p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+          <div class="card-button" target="_blank">
+            <a href="https://drive.google.com/file/d/1sJzwMDlARpVo0Ztj9aNK2QkZRO4u9x9G/view?usp=sharing"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
       </div>
-  
-      <div class="card">
-        <img src="../Fotos_nosotros/eduardo.png" class="card-img-top" alt="..." width="286px">
-        <div class="card-body">
-          <h5 class="card-title">Eduardo Cruz</h5>
-          <h6>Developer Team</h6>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">
-              <a href="https://github.com/EdWrite" target="_blank" class="card-link"><img src="../Fotos_pagina/GitHub.png"
-                  alt="" width="25px" height="25px"></a>
-            </li>
-          </ul>
-          <p class="card-text">Full Stack Developer | HTML, CSS, JavaScript. Profesional cómo desarrollador
-            Web/Multiplataforma. Amor por el código, la búsqueda de soluciones y nuevas implementaciones.</p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
-              target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
-          </div>
-        </div>
-      </div>
-  
+      
       <div class="card">
         <img src="../Fotos_nosotros/johanna.png" class="card-img-top" alt="..." width="286px">
         <div class="card-body">
@@ -155,8 +135,8 @@
           <p class="card-text">Diseñadora gráfica, proactiva, apasionada del diseño, la mercadotecnia, fotografía, la
             tecnología y con un gusto adquirido por la programación. Me preparé como Desarrolladora Full Stack y Diseñadora UX.
           </p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+          <div class="card-button" target="_blank">
+            <a href="https://drive.google.com/file/d/15BiD-Wskvo9B9BbYp00EafH_tlntFPHU/view?usp=sharing"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
@@ -177,8 +157,8 @@
             Stack
             por pasión. Comprometido, perseverante, franco y con gusto por trabajar en equipo.
           </p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+          <div class="card-button" target="_blank">
+            <a href="https://drive.google.com/file/d/1WKl24Kqlss4qinakrlYsQETISmFnpnbx/view?usp=sharing"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
   
           </div>
@@ -198,8 +178,8 @@
           </ul>
           <p class="card-text">Ingeniera Bioquímica y Técnica Analista programadora, interesada en el área de TI. Realicé
             cursos y certificaciones para enfocarme al área de desarrollo web Full Stack.</p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+          <div class="card-button" target="_blank">
+            <a href="https://drive.google.com/file/d/1dp98E0uSjDuelFvVqFexyoSpnyZ-AhHQ/view"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
   
           </div>
@@ -220,8 +200,8 @@
           <p class="card-text">Egresado en electrónica encontré una pasión en el código lo que motivó a cambiar mi enfoque
             y
             actual desempeño como desarrollador web buscando siempre innovar y crecer profesionalmente.</p>
-          <div class="card-button">
-            <a href="https://www.figma.com/file/pv9lja8yzYyeAnR8PsQG17/Maqueta-NAOM.?node-id=156%3A1838&t=aBtpH132KLEiomI1-0"
+          <div class="card-button" target="_blank">
+            <a href="https://drive.google.com/file/d/1Tzr6Ud1U1w_WYEtQ9t0HVJZo86zNyhgR/view"
               target="_blank" class="btn btn-dark" role="button">Descargar CV</a>
           </div>
         </div>
