--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -63,13 +63,13 @@
       <!-- INFO DE CONTACTO -->
     <div class="text-center col-lg-5 col-sm-12 pt-2" id="contactUs">
       <br>
-      <h5>Horarios de operación</h5>
+      <h5><strong>Horarios de operación</strong></h5>
+      <br>
       <p>Lunes - Viernes 10 AM - 5 PM GMT+6
         <br>Celular: +52 (999) 165-9987
         <br>Email: contacto.naom@gmail.com
       </p>
-      <p>Escríbenos tus preguntas o tus recomendaciones y nuestro equipo de especialistas te contestarán en las próximas
-        24 Hrs.</p>
+  
     </div>
     
     <!-- FORMULARIO DE CONTACTO -->
@@ -79,12 +79,12 @@
       <br>
       <div class="box">
         <label for="exampleFormControlInput1" class="form-label">Nombre:</label>
-        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+        <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="Juan Pérez">
       </div>
       <br>
       <div class="box">
         <label for="exampleFormControlInput1" class="form-label">Correo:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="name@example.com">
+        <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="nombre@ejemplo.com">
       </div>
       <br>
       <div class="box">
