--- a/HTML/registro.html
+++ b/HTML/registro.html
@@ -64,33 +64,33 @@
     <form>
       <div class="row justify-content-around mt-5" id="Cuenta">
         <div class="col-lg-4 col-10 form-input"><label><strong>Nombre:</strong></label>
-          <input type="text" class="form-control" placeholder="Nombre" id="nombre">
+          <input type="text" class="form-control" placeholder="Juan" id="nombre">
           <div class="alertRegistro" id="alertNombre" style="display: none;">El nombre no es válido</div>
         </div>
         <div class="col-lg-4 col-10 form-input"><label><strong>Apellido:</strong></label>
-          <input type="text" class="form-control" placeholder="Apellido" id="apellido">
+          <input type="text" class="form-control" placeholder="Pérez" id="apellido">
           <div class="alertRegistro" id="alertApellido" style="display: none;">El apellido no es válido</div>
         </div>
       </div>
       <div class="row justify-content-around">
         <div class="col-lg-4 col-10 form-input"><label><strong>Correo:</strong></label>
-          <input type="email" class="form-control" placeholder="name@example.com" id="email">
+          <input type="email" class="form-control" placeholder="nombre@ejemplo.com" id="email">
           <div class="alertRegistro" id="alertCorreo" style="display: none;">El correo electrónico no es válido</div>
         </div>
 
         <div class="col-lg-4 col-10 form-input"><label><strong>Teléfono:</strong></label>
-          <input type="tel" maxlength="12" class="form-control" placeholder="Teléfono" id="tel">
+          <input type="tel" maxlength="12" class="form-control" placeholder="Formato XX-XXXX-XXXX" id="tel">
           <div class="alertRegistro" id="alertTel" style="display: none;">Ingresa un número válido</div>
         </div>
       </div>
       <div class="row justify-content-around">
         <div class="col-lg-4 col-10 form-input"><label><strong>Contraseña:</strong></label>
-          <input type="password" class="form-control" id="password" placeholder="Contraseña:">
+          <input type="password" class="form-control" id="password" placeholder="Ingresar mínimo 6 caracteres">
           <div class="alertRegistro" id="alertErrorPassword" style="display: none;">Mínimo 6 caracteres requeridos
           </div>
         </div>
         <div class="col-lg-4 col-10 form-input"><label><strong>Confirmar contraseña:</strong></label>
-          <input type="password" class="form-control" id="confirmPassword" placeholder="Confirmar contraseña:">
+          <input type="password" class="form-control" id="confirmPassword" placeholder="Confirmar contraseña">
           <div class="alertRegistro" id="alertConfPassword" style="display: none;">Las contraseñas no coinciden </div>
         </div>
       </div>
