Se modifico la página de contactos

--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -63,19 +63,17 @@
       <!-- INFO DE CONTACTO -->
     <div class="text-center col-lg-5 col-sm-12 pt-2" id="contactUs">
       <br>
-      <h5><strong>Horarios de operación</strong></h5>
+      <p style="font-size: 25px;"><b> Horarios de operación</b></p>
       <br>
       <p>Lunes - Viernes 10 AM - 5 PM GMT+6
         <br>Celular: +52 (999) 165-9987
         <br>Email: contacto.naom@gmail.com
       </p>
-  
     </div>
     
     <!-- FORMULARIO DE CONTACTO -->
     <div id="formContact" class="col-lg-5 col-sm-12">
-      <div class="alert alert-danger" id="alertError" style="display: none;" role="alert">
-      </div>
+      <div class="alert alert-danger" id="alertError" style="display: none; margin-top: 20px;" role="alert"></div>
       <br>
       <div class="box">
         <label for="exampleFormControlInput1" class="form-label">Nombre:</label>
@@ -89,7 +87,7 @@
       <br>
       <div class="box">
         <label for="exampleFormControlInput1" class="form-label">Teléfono:</label>
-        <input type="tel" maxlength="12" class="form-control" id="exampleFormControlInput3" placeholder="Formato: xx-xxxx-xxxx">
+        <input type="tel" maxlength="12" class="form-control" id="exampleFormControlInput3" placeholder="Formato XX-XXXX-XXXX">
       </div>
       <br>
       <div class="box">
