Agrega mensajes e imagenes al banner en página pricipal

--- a/index.html
+++ b/index.html
@@ -68,16 +68,24 @@
     <div class="carousel-inner">
       <div class="carousel-item active c-item">
         <img src="/Fotos_pagina/pink-makeup-1611776547 (1).png" class="d-block w-100 c-img" alt="Slide1">
-        <!-- <div class="carousel-caption">
-          <h5>Brocha</h5>
-          <p>La mejor brocha de mexico.</p>
-        </div> -->
+        <div class="carousel-caption">
+          <h1>Espera nuestras ofertas!</h1>
+          <p>Te sorprenderás!</p>
+        </div>
       </div>
       <div class="carousel-item c-item">
-        <img src="/Fotos-productos/FullSizeRender-3.jpg" class="d-block w-100 c-img" alt="slide2">
+        <img src="./Fotos_pagina/banner-maquillaje-mujer.jpg" class="d-block w-100 c-img" alt="slide2">
+        <div class="carousel-caption">
+          <h1>Somos la mejor tienda de maquillaje en México</h1>
+          <p>Llegamos para quedarnos!</p>
+        </div>
       </div>
       <div class="carousel-item c-item">
-        <img src="/Fotos-productos/FullSizeRender-5.jpg" class="d-block w-100 c-img" alt="slide3">
+        <img src="./Fotos_pagina/banner-maquillaje.jpg" class="d-block w-100 c-img" alt="slide3">
+        <div class="carousel-caption">
+          <h1>Encuentra todo lo que necesites para lucir perfecta</h1>
+          <p>Tu mejor opción</p>
+        </div>
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#hero-carousel" data-bs-slide="prev">
