Alerta de imagen en form

--- a/HTML/formProductos.html
+++ b/HTML/formProductos.html
@@ -65,6 +65,7 @@
             <img id="prevImg" width="200px" src="../Fotos_pagina/photo-camera.png" />
             <p class="mt-1">La imagen debe de tener una altura y ancho iguales. Ej. 160x160</p>
             <input type="file" name="file" id="form0" onchange="encodeImageFileAsURL(this)" class="form-control mt-2" />
+            <div class="alertRegistro" id="alertFile" style="display: none;">Debe de contener una foto</div>
         </div>
         <div class="col-lg-7 form-outline">
             <label class="form-label" for="form1">Nombre del producto</label>
