--- a/HTML/maquillaje.html
+++ b/HTML/maquillaje.html
@@ -62,7 +62,7 @@
           <input type="text" class="ms-2" placeholder="máx.">
         </div>
       </div>
-      <div id="card-wrapper" class="row mt-5">
+      <div id="card-wrapper" class="row mt-5 ms-5">
       </div>
     </main>
 
