Funcion para validar inicio de sesion y guardar un objeto loggedin en localStorage

--- a/HTML/logIn.html
+++ b/HTML/logIn.html
@@ -77,7 +77,7 @@
       <div class="row justify-content-around">
         <div class="col-lg-4 col-6 text-center my-5">
           <button type="button" class="btnLogIn" id="btnLogIn">Inicia sesión</button>
-          <p class="mt-4" style="font-family: ExoSemiBold;">¿No tienes una cuenta? Registrate</p>
+          <p class="mt-4" style="font-family: ExoSemiBold;">¿No tienes una cuenta? <a href="./registro.html">¡Regístrate!</a></p>
         </div>
       </div>
       <div class="mb-5"></div>
