Se agrego dropdown al icono de usuario en las navbar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,20 @@
     <div class="container-fluid">
       <a class="navbar-brand" style="margin-right: 0;" href="index.html"><img src="./Fotos_pagina/Logo_NAOM.png"
           alt=""></a>
-          <div id="user-wrapper">
-            <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-            <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+          <div class="row" id="user-wrapper">
+            <div class="col-4">
+            <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="cartIcon"></a>
+          </div>
+            <div class="dropdown col-4">
+                  <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="./Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
+                  </a>
+                  <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="./HTML/logIn.html">Inicia Sesión</a></li>
+                    <li><a class="dropdown-item" href="./HTML/registro.html">Registrate</a></li>
+                  </ul>
+          </div>
+            <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
           </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
