--- a/HTML/accesorios.html
+++ b/HTML/accesorios.html
@@ -12,9 +12,20 @@
     <nav class="navbar navbar-expand-xl bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
-        <div id="user-wrapper">
-          <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-          <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+        <div class="row" id="user-wrapper">
+          <div class="col-4">
+          <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="cartIcon"></a>
+        </div>
+          <div class="dropdown col-4">
+                <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="../HTML/logIn.html">Inicia Sesión</a></li>
+                  <li><a class="dropdown-item" href="../HTML/registro.html">Registrate</a></li>
+                </ul>
+        </div>
+          <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
         </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -28,7 +39,7 @@
               <a class="nav-link" href="./cuidadofacial.html">Cuidado facial</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./Brochas.html">Brochas</a>
+              <a class="nav-link" href="./brochas.html">Brochas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./accesorios.html">Accesorios</a>
@@ -47,6 +58,7 @@
         </form>
       </div>
     </nav>
+  
 
     <h1>Accesorios</h1>
 
