--- a/HTML/cuidadofacial.html
+++ b/HTML/cuidadofacial.html
@@ -16,9 +16,20 @@
   <nav class="navbar navbar-expand-xl bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" style="margin-right: 0;" href="../index.html" ><img src="../Fotos_pagina/Logo_NAOM.png" alt="" width="150px" ></a>
-      <div id="user-wrapper">
-        <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="shoppingCart"></a>
-        <a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>
+      <div class="row" id="user-wrapper">
+        <div class="col-4">
+        <a class="iconNav" href="../HTML/carrito.html"><img src="../Fotos_pagina/Carrito.png" alt="" width="35px" id="cartIcon"></a>
+      </div>
+        <div class="dropdown col-4">
+              <a class="iconNav" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon">
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="../HTML/logIn.html">Inicia Sesión</a></li>
+                <li><a class="dropdown-item" href="../HTML/registro.html">Registrate</a></li>
+              </ul>
+      </div>
+        <!--<a class="iconNav" href="../html/registro.html"><img src="../Fotos_pagina/Usuario.png" alt="" width="35px" id="userIcon"></a>-->
       </div>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -51,6 +62,7 @@
       </form>
     </div>
   </nav>
+
 
     <h1>Cuidado facial</h1>
 
